--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@mui/material": "^5.11.16",
     "@next-auth/prisma-adapter": "^1.0.5",
     "@prisma/client": "^4.9.0",
+    "@reduxjs/toolkit": "^1.9.5",
     "@tanstack/react-query": "^4.20.2",
     "@trpc/client": "^10.9.0",
     "@trpc/next": "^10.9.0",
@@ -28,8 +29,11 @@
     "framer-motion": "^10.12.7",
     "next": "^13.2.1",
     "next-auth": "^4.19.0",
+    "next-themes": "^0.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.9.0",
+    "react-redux": "^8.0.7",
     "superjson": "1.9.1",
     "zod": "^3.20.6"
   },
